add some tests for KubeClientImpl